# repo-to-prompt

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
repo_to_prompt/: cli.py  models.py  output.py  repository.py
tests/: conftest.py  test_integration.py  test_repository.py
